--- a/2.htm
+++ b/2.htm
@@ -18,6 +18,15 @@ worker<br>
 
 worked<br>
 
-works
+works<br>
+
+   fall<br>
+  fell<br>
+  fallen<br>
+
+  forgive <br>
+  forgave<br>
+  forgiven<br>
 
 </h1>
+
